--- a/index.html
+++ b/index.html
@@ -15,48 +15,59 @@
 
 
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="https://cdn-icons-png.flaticon.com/512/3061/3061264.png" alt="cloud-img">
     <h1>I'm Mahmoud</h1>
-    <p>A <span><strong>Data</strong></span> Scientist..</p>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img class="mountain" src="images/mountain.png" alt="mountain-img">
+    <h2>
+    <p>A <span><em>Data</em></span> Scientist..</p>
+    </h2>
+    <img class="bottom-cloud" src="https://cdn-icons-png.flaticon.com/512/3061/3061258.png" alt="cloud-img">
+    <img class="mountain" src="https://cdn-icons-png.flaticon.com/512/1449/1449312.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
     <div class="profile">
       <img src="" alt="">
       <h2>Hello.</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <p>I'm a Microsoft certified data scientist who is highly motivated and enthusiastic about the future of AI.</p>
+      <p>Achievements include numerous publications, projects, and research in applied machine learning methodologies to resolve real-life problems.</p>
     </div>
-    <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="" src="" alt="">
-        <h3>Lorem & Ipsum</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
-      </div>
-      <div class="skill-row">
-        <img class="" src="" alt="">
-        <h3>Lorem Ipsum Dolor</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <img class="skills-img" src="https://cdn-icons-png.flaticon.com/512/900/900961.png" alt="" height="100px">
+        <h3>Artificial Intelligence</h3><br>
+        <img class="skills-img" src="https://cdn-icons-png.flaticon.com/512/5968/5968350.png" alt="" height="100px">
+        <h3>Python</h3><br>
+        <img class="skills-img" src="https://cdn-icons-png.flaticon.com/512/4492/4492311.png" alt="" height="100px">
+        <h3>SQL</h3><br>
+        <img class="skills-img" src="https://cdn-icons-png.flaticon.com/512/4176/4176903.png" alt="" height="100px">
+        <h3>Data Analysis</h3><br>
+        <img class="skills-img" src="https://cdn-icons-png.flaticon.com/512/2786/2786969.png" alt="" height="100px">
+        <h3>Web Development [HTML & CSS]</h3><br>
+        <img class="skills-img" src="https://cdn-icons-png.flaticon.com/512/873/873107.png" alt="" height="100px">
+        <h3>Azure</h3><br>
+        <img class="skills-img" src="https://cdn-icons-png.flaticon.com/512/2620/2620297.png" alt="" height="100px">
+        <h3>Power BI/Business Intelligence</h3><br>
+        <img class="skills-img" src="https://cdn-icons-png.flaticon.com/512/3896/3896640.png" alt="" height="100px">
+        <h3>Data Visualization</h3><br>
+        <img class="skills-img" src="https://cdn-icons-png.flaticon.com/512/7955/7955497.png" alt="" height="100px">
+        <h3>Algorithms</h3><br>
       </div>
     </div>
-    <hr>
+
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      <h3>Please get in touch if you have any questions!</h3>
+      <p>My contacts/social media are found here.</p>
+      <a class="btn" href="mailto:mahmoued_999@hotmail.com">CONTACT ME</a>
     </div>
   </div>
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p>© 2018 Name Surname.</p>
+    <a class="footer-link" href="https://www.linkedin.com/in/mahmoud-mesleh/">LinkedIn</a>
+    <a class="footer-link" href="https://www.instagram.com/mahmoud_mesleh/">Instagram</a>
+    <p color="white";>© 2022 Mahmoud Mesleh.</p>
   </div>
 
 </body>
