--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/mahmoud-mesleh/">LinkedIn</a>
     <a class="footer-link" href="https://www.instagram.com/mahmoud_mesleh/">Instagram</a>
-    <p color="white";>© 2022 Mahmoud Mesleh.</p>
+    <p class="copyright";>© 2022 Mahmoud Mesleh.</p>
   </div>
 
 </body>
